Switch to Base64 encoder/decoder from Commons Codec
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1459289 13f79535-47bb-0310-9956-ffa450edef68